--- a/zuruflix/static/css/styles.css
+++ b/zuruflix/static/css/styles.css
@@ -28,7 +28,7 @@ nav ul li {
     margin: 0 20px;
 }
 
-nav ul li a {
+nav ul li button {
     color: #ff416c;
     text-decoration: none;
     font-size: 18px;
